--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,5 @@
 {
+    "version": "1.0.0",
     "name": "gabrielsoaresmaciel/php-lib-example",
     "description": "php lib to learning how to create and publish in packagist",
     "type": "library",
