--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,12 @@
     },
     "require": {
         "php": ">=7.0"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.64"
+    },
+    "scripts": {
+        "lint:test": "./vendor/bin/php-cs-fixer check",
+        "lint:fix": "./vendor/bin/php-cs-fixer fix"
     }
 }
