--- a/.github/workflows/new-version.yml
+++ b/.github/workflows/new-version.yml
@@ -5,3 +5,5 @@ jobs:
   php_lib:
     name: new_version
     uses: GabrielSoares-Dev/workflows/.github/workflows/php-lib-new-version.yml@master
+    secrets:
+      git_token: ${{secrets.GIT_TOKEN}}
