--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
-    "version": "1.2.0",
-    "name": "gabrielsoaresmaciel/php-lib-example",
-    "description": "php lib to learning how to create and publish in packagist",
-    "type": "library",
+    "version": "1.0.0",
+    "name": "gabrielsoaresmaciel/heic-to-jpg",
+    "type": "project",
     "license": "MIT",
     "authors": [
         {
@@ -12,7 +11,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "GabrielSoaresMaciel\\PhpLibExample\\": "src/"
+            "GabrielSoaresMaciel\\HeicToJPG\\": "src/"
         }
     },
     "autoload-dev": {
@@ -21,7 +20,8 @@
         }
     },
     "require": {
-        "php": ">=7.0"
+        "php": ">=7.0",
+        "maestroerror/php-heic-to-jpg": "^1.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.64",
